# polkadex-stencil-substrate

./: README.md  build-spec.sh  deploy.sh  download-binaries.sh  fix-cargo.sh  local.sh  restart.sh  start-bootnode.sh  stencil-testnet-config.md
infra/: deploy-nodes.yml  download.sh  key-gen.sh  provision-ec2-mumbai.yml  restart.yml  set-keys.yml  stop-delete.yml  upload-bin-genesis.sh
infra/keygen/: index.js  package-lock.json  package.json
infra/templates/: node.j2  polkadex-node-1-audi.json  polkadex-node-1-imon.json  polkadex-node-1-thea.json  polkadex-node-10-audi.json  polkadex-node-10-babe.json  polkadex-node-10-gran.json  polkadex-node-10-imon.json  polkadex-node-10-thea.json  polkadex-node-100-audi.json  polkadex-node-100-imon.json  polkadex-node-100-thea.json  polkadex-node-11-audi.json  polkadex-node-11-babe.json  polkadex-node-11-gran.json  polkadex-node-11-imon.json  polkadex-node-11-thea.json  polkadex-node-12-audi.json  polkadex-node-12-babe.json  polkadex-node-12-gran.json  polkadex-node-12-imon.json  polkadex-node-12-thea.json  polkadex-node-13-audi.json  polkadex-node-13-babe.json  polkadex-node-13-gran.json  polkadex-node-13-imon.json  polkadex-node-13-thea.json  polkadex-node-14-audi.json  polkadex-node-14-babe.json  polkadex-node-14-gran.json  polkadex-node-14-imon.json  polkadex-node-14-thea.json  polkadex-node-15-audi.json  polkadex-node-15-babe.json  polkadex-node-15-gran.json  polkadex-node-15-imon.json  polkadex-node-15-thea.json  polkadex-node-16-audi.json  polkadex-node-16-babe.json  polkadex-node-16-gran.json  (+455 more)
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
pallets/thea-client/: Cargo.toml
pallets/thea-client/src/: communication.rs  gossip.rs  lib.rs  mpc.rs  mpc_round.rs  round.rs  worker.rs
pallets/thea-pallet/: Cargo.toml
pallets/thea-pallet/src/: lib.rs
pallets/thea-primitives/: Cargo.toml
pallets/thea-primitives/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: constants.rs  impls.rs  lib.rs
runtime/src/weights/: pallet_staking.rs  pallet_utility.rs
scripts/: bootnode.sh  set-keys.sh  validator01.sh  validator02.sh
