[package]
name = "polkadex-stencil"
authors = ["mambisi <lilbizi96@gmail.com>"]
build = 'build.rs'
description = 'Substrate node template'
edition = '2018'
homepage = 'https://substrate.io'
license = 'Unlicense'
repository = 'https://github.com/kaichaosun/substrate-stencil'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = '3.0.0'

[dependencies]
jsonrpc-core = '15.0.0'
structopt = '0.3.8'
hex-literal = "0.3.1"

# local dependencies
node-template-runtime = { path = '../runtime', version = '3.0.0' }

# Substrate dependencies
frame-benchmarking = '3.0.0'
frame-benchmarking-cli = '3.0.0'
pallet-im-online = '3.0.0'
pallet-staking = '3.0.0'
pallet-transaction-payment-rpc = '3.0.0'
sc-basic-authorship = '0.9.0'
sc-cli = { features = ['wasmtime'], version = '0.9.0' }
sc-client-api = '3.0.0'
sc-consensus = '0.9.0'
sc-consensus-babe = '0.9.0'
sc-consensus-babe-rpc = '0.9.0'
sc-consensus-epochs = '0.9.0'
sc-executor = { features = ['wasmtime'], version = '0.9.0' }
sc-finality-grandpa = '0.9.0'
sc-finality-grandpa-rpc = '0.9.0'
sc-keystore = '3.0.0'
sc-network = '0.9.0'
sc-rpc = '3.0.0'
sc-rpc-api = '0.9.0'
sc-service = { features = ['wasmtime'], version = '0.9.0' }
sc-transaction-pool = '3.0.0'
sp-api = '3.0.0'
sp-block-builder = '3.0.0'
sp-blockchain = '3.0.0'
sp-consensus = '0.9.0'
sp-consensus-babe = '0.9.0'
sp-core = '3.0.0'
sp-finality-grandpa = '3.0.0'
sp-inherents = '3.0.0'
sp-runtime = '3.0.0'
sc-telemetry = '3.0.0'
sp-transaction-pool = '3.0.0'
substrate-frame-rpc-system = '3.0.0'

[features]
default = []
runtime-benchmarks = ['node-template-runtime/runtime-benchmarks']
