[package]
name = "polkadex-stencil"
authors = ["mambisi <lilbizi96@gmail.com>"]
build = 'build.rs'
description = 'Substrate node template'
edition = '2018'
homepage = 'https://substrate.io'
license = 'Unlicense'
repository = 'https://github.com/kaichaosun/substrate-stencil'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0" }

[dependencies]
jsonrpc-core = '15.1.0'
structopt = '0.3.8'
hex-literal = "0.3.1"
futures = { version = "0.3.9", features = ["compat"] }
# local dependencies
node-template-runtime = { path = '../runtime', version = '3.0.0' }

# Substrate dependencies
frame-benchmarking = { version = '3.1.0', git = "https://github.com/paritytech/substrate" }
frame-benchmarking-cli = { version = '3.0.0', git = "https://github.com/paritytech/substrate" }
pallet-im-online = { version = '3.0.0', git = "https://github.com/paritytech/substrate" }
pallet-staking = { version = '3.0.0', git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment-rpc = { version = '3.0.0', git = "https://github.com/paritytech/substrate" }
sc-basic-authorship = { version = '0.9.0', git = "https://github.com/paritytech/substrate" }
sc-cli = { features = ['wasmtime'], version = '0.9.0', git = "https://github.com/paritytech/substrate" }
sc-client-api = { version = '3.0.0', git = "https://github.com/paritytech/substrate" }
sc-consensus = { version = '0.9.0', git = "https://github.com/paritytech/substrate" }
sc-consensus-slots = { version = '0.9.0', git = "https://github.com/paritytech/substrate" }
sc-consensus-uncles = { version = '0.9.0', git = "https://github.com/paritytech/substrate" }
sc-authority-discovery = { version = '0.9.0', git = "https://github.com/paritytech/substrate" }
sc-consensus-babe = { version = '0.9.0', git = "https://github.com/paritytech/substrate" }
sc-consensus-babe-rpc = { version = '0.9.0', git = "https://github.com/paritytech/substrate" }
sc-consensus-epochs = { version = '0.9.0', git = "https://github.com/paritytech/substrate" }
sc-executor = { features = ['wasmtime'], version = '0.9.0', git = "https://github.com/paritytech/substrate" }
sc-finality-grandpa = { version = '0.9.0', git = "https://github.com/paritytech/substrate" }
sc-finality-grandpa-rpc = { version = '0.9.0', git = "https://github.com/paritytech/substrate" }
sc-keystore = { version = '3.0.0', git = "https://github.com/paritytech/substrate" }
sc-network = { version = '0.9.0', git = "https://github.com/paritytech/substrate" }
sc-rpc = { version = '3.0.0', git = "https://github.com/paritytech/substrate" }
sc-rpc-api = { version = '0.9.0', git = "https://github.com/paritytech/substrate" }
sc-service = { features = ['wasmtime'], version = '0.9.0', git = "https://github.com/paritytech/substrate" }
sc-transaction-pool = { version = '3.0.0', git = "https://github.com/paritytech/substrate" }
sp-api = { version = '3.0.0', git = "https://github.com/paritytech/substrate" }
sp-authorship = { version = '3.0.0', git = "https://github.com/paritytech/substrate" }
sp-block-builder = { version = '3.0.0', git = "https://github.com/paritytech/substrate" }
sp-blockchain = { version = '3.0.0', git = "https://github.com/paritytech/substrate" }
sp-consensus = { version = '0.9.0', git = "https://github.com/paritytech/substrate" }
sp-consensus-babe = { version = '0.9.0', git = "https://github.com/paritytech/substrate" }
sp-core = { version = '3.0.0', git = "https://github.com/paritytech/substrate" }
sp-keystore = { version = '0.9.0', git = "https://github.com/paritytech/substrate" }
sp-finality-grandpa = { version = '3.0.0', git = "https://github.com/paritytech/substrate" }
sp-inherents = { version = '3.0.0', git = "https://github.com/paritytech/substrate" }
sp-timestamp = { version = '3.0.0', git = "https://github.com/paritytech/substrate" }
sp-runtime = { version = '3.0.0', git = "https://github.com/paritytech/substrate" }
sc-telemetry = { version = '3.0.0', git = "https://github.com/paritytech/substrate" }
sp-transaction-pool = { version = '3.0.0', git = "https://github.com/paritytech/substrate" }
substrate-frame-rpc-system = { version = '3.0.0', git = "https://github.com/paritytech/substrate" }

[features]
default = []
runtime-benchmarks = ['node-template-runtime/runtime-benchmarks']
